<resources>
    <string name="app_name">infogram</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="buttonText">LOGIN</string>
    <string name="isNoAccount">"¿No tienes una cuenta?, "</string>
    <string name="createAccount"> Registrate Aqui</string>
    <string name="email">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="confirm_contrasena">Confirme contraseña</string>
    <string name="buttonText_createAccount">UNETE</string>
    <string name="title_crearCuenta">Crear cuenta</string>
    <string name="carlos_vargas_cardview">Carlos Vargas</string>
    <string name="hace_cardview">Hace</string>
    <string name="dias_cardview">" 4 dias"</string>
    <string name="me_gusta_cardview">" 10 Me gusta"</string>
    <string name="buscar_item">Buscar</string>
    <string name="home_item">Home</string>
    <string name="profile">Yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_fragment">Home</string>
    <string name="text_megusta_image_detail">me gusta</string>
    <string name="text_cantidad_megusta_image_detail">10</string>
    <string name="text_title_image_detail">\"Todo copas en la playa"</string>
    <string name="text_content_image_detail">Lorem ipsum dolor sit amet consectetur adipiscing elit, dignissim eu molestie sociosqu ullamcorper nec, at potenti ad tristique eget bibendum. Quis per varius tristique phasellus nostra hac vehicula nascetur aenean facilisi nunc, himenaeos malesuada netus inceptos quisque blandit montes bibendum lobortis etiam ultrices arcu, eu venenatis viverra euismod nisl duis class habitant eleifend turpis. Pulvinar viverra elementum eleifend at tempus sollicitudin massa senectus mi, dictum nullam condimentum sed commodo laoreet facilisi nunc iaculis habitasse, tellus aptent aliquam nisi malesuada diam porta praesent. Nullam phasellus mauris aliquet ligula eget duis turpis, curae diam in pharetra sociis nascetur libero, dictum varius taciti porttitor malesuada odio.</string>
    <string name="transitionName_imageCardView">transitionName_imageCardView</string>
</resources>